; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_tcx.c_tcx_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_tcx.c_tcx_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fb_info = type { i64 }
%struct.tcx_par = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fb_info*)* @tcx_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tcx_reset(%struct.fb_info* %0) #0 {
  %2 = alloca %struct.fb_info*, align 8
  %3 = alloca %struct.tcx_par*, align 8
  %4 = alloca i64, align 8
  store %struct.fb_info* %0, %struct.fb_info** %2, align 8
  %5 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %6 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = inttoptr i64 %7 to %struct.tcx_par*
  store %struct.tcx_par* %8, %struct.tcx_par** %3, align 8
  %9 = load %struct.tcx_par*, %struct.tcx_par** %3, align 8
  %10 = getelementptr inbounds %struct.tcx_par, %struct.tcx_par* %9, i32 0, i32 0
  %11 = load i64, i64* %4, align 8
  %12 = call i32 @spin_lock_irqsave(i32* %10, i64 %11)
  %13 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %14 = call i32 @__tcx_set_control_plane(%struct.fb_info* %13)
  %15 = load %struct.tcx_par*, %struct.tcx_par** %3, align 8
  %16 = getelementptr inbounds %struct.tcx_par, %struct.tcx_par* %15, i32 0, i32 0
  %17 = load i64, i64* %4, align 8
  %18 = call i32 @spin_unlock_irqrestore(i32* %16, i64 %17)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @__tcx_set_control_plane(%struct.fb_info*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
